Cover page update

--- a/src/l3/title.tex
+++ b/src/l3/title.tex
@@ -9,6 +9,7 @@
         % Submitted by
         \normalsize Submitted by\\[0.2in]
         \textbf{Tisserand Thibault}\\
+        Intern\\
         University of Lille\\
 
         \vspace{.2in}
