Finished writing all the stains

--- a/src/l3/tasks.tex
+++ b/src/l3/tasks.tex
@@ -1,7 +1,26 @@
 \section{Tasks}
-The tasks planned for the internships are diverse and varied but they
-are all necessary for the realization of the internship subject.
-
+The tasks foreseen for the internships are diverse and varied but they
+are all necessary for the realization of the internship subject from near or far.
+\newline
+\newline
 First of all I took care of the installation of the project which 
 consists in compiling the code, installing the architecture of the
-project on the system and starting the necessary services
+project on the system and starting the necessary services.
+\newline
+\newline
+In a second step I have to write scripts, an export and an import which should allow
+to make a backup of the database as well as all the test scripts generated in an archive
+in .tar.gz format and therefore also able to import an archive to find these backups.
+\newline
+\newline
+Subsequently I have to modify the application so that it generates test files in python
+instead of a Shell script file and consequently update the Shell utility function files
+in python.
+\newline
+\newline
+I also have to create a configuration file generator for the machine on which I have to
+do the tests in order to generate unique configurations for each test.
+\newline
+\newline
+Finally I have to complete the self-generated test files as well as the tests on the target
+machine with the right values and then optimize the tests and the software that generates them.
