--- a/src/l3/conclusion.tex
+++ b/src/l3/conclusion.tex
@@ -1,1 +1,10 @@
 \section{Conclusion}
+At present, I would say that I have completed 65\% of my tasks to do, I will soon have
+fully automated and self-generated tests. The biggest difficulty I had was adapting to the
+already existing semi-functional application which was very complex when it could be much
+cleaner and less cumbersome.
+To conclude I will say that I am a little disappointed with my internship in the sense that
+I did not expect from something that already existed, I thought it was up to me to propose a
+technical solution from scratch.
+Despite this, the team is very friendly and always in a good mood, which makes you want to
+work on a daily basis.
