Update of formulations

--- a/src/l3/before.tex
+++ b/src/l3/before.tex
@@ -1,5 +1,4 @@
 \section{Before the internship}
-Before the internship I didn't do much, I knew my internship supervisor
-thanks to my internship last year in another department so I knew that
-this past was going well. I just said to myself that I was going to
+Before the internship I did not do anything special. I already knew my internship supervisor since I did
+an internship in another department of that company last year. I just said to myself that I was going to
 work as I usually do on personal projects.
