--- a/src/l3/conclusion.tex
+++ b/src/l3/conclusion.tex
@@ -1,10 +1,8 @@
 \section{Conclusion}
-At present, I would say that I have completed 65\% of my tasks to do, I will soon have
-fully automated and self-generated tests. The biggest difficulty I had was adapting to the
-already existing semi-functional application which was very complex when it could be much
-cleaner and less cumbersome.
-To conclude I will say that I am a little disappointed with my internship in the sense that
-I did not expect from something that already existed, I thought it was up to me to propose a
-technical solution from scratch.
-Despite this, the team is very friendly and always in a good mood, which makes you want to
-work on a daily basis.
+At present, I would say that I have completed 70\% of planned tasks. I will soon have
+fully automated and self-generated tests ready. The biggest difficulty I had was adapting
+to the already existing semi-functional application which was very complex.
+To conclude I thought I had to propose a technical solution from scratch for the internship subject.
+But at the end, I found it quite interesting to adapt and enhance an already existing architecture.
+The team I'm working with is very friendly and always in a good mood, which is very pleasant and
+makes you happy to work on a daily basis with such people.
