--- a/src/l3/expectations.tex
+++ b/src/l3/expectations.tex
@@ -1,6 +1,6 @@
 \section{Company expectations}
 The tasks planned for my internship were quite generalist since it
-involved writing automatic tests using an "house" tool. The automatic
+involved writing automatic tests using an "in-house" tool. The automatic
 tests will be set up on equipment allowing voice and signaling to be
 converted from analogue to digital and vice versa using RTP (Real Time Protocol) and SIP
 (Session Initiation Protocol) protocols.
