--- a/src/l3/tasks.tex
+++ b/src/l3/tasks.tex
@@ -3,19 +3,20 @@ The tasks foreseen for the internships are diverse and varied but they
 are all necessary for the realization of the internship subject from near or far.
 \newline
 \newline
-First of all I took care of the installation of the project which 
+First of all I have to take care of the installation of the project which 
 consists in compiling the code, installing the architecture of the
 project on the system and starting the necessary services.
 \newline
 \newline
-In a second step I have to write scripts, an export and an import which should allow
-to make a backup of the database as well as all the test scripts generated in an archive
-in .tar.gz format and therefore also able to import an archive to find these backups.
+In a second step I have to write two scripts to export and import project data.
+The export script should perform a backup of the database and  all the test scripts
+generated, in an archive .tar.gz format. The import script should read the archive
+and restore the database and all the test scripts.
 \newline
 \newline
-Subsequently I have to modify the application so that it generates test files in python
-instead of a Shell script file and consequently update the Shell utility function files
-in python.
+Subsequently I have to modify the application so that it generates test files
+in python language instead of Shell script. Consequently I have to convert the Shell
+utility function files  into python language.
 \newline
 \newline
 I also have to create a configuration file generator for the machine on which I have to
