Adding a title to the slide

--- a/src/l3/internship/presentation/slides/sources.tex
+++ b/src/l3/internship/presentation/slides/sources.tex
@@ -1,4 +1,5 @@
 \begin{frame}
+    \frametitle{Sources}
     \begin{itemize}
         \item https://www.csgroup.eu/fr/offres-solutions/communications-vocales-tactiques/systemes-de-communications-vocales/
     \end{itemize}
