Addition of legal form and organization chart

--- a/src/l3/internship/presentation/slides/introduction.tex
+++ b/src/l3/internship/presentation/slides/introduction.tex
@@ -6,10 +6,12 @@
         \item Période: 11 avril au 1er Juillet
         \item Société: CS Group
             \begin{itemize}
+                \item Forme juridique: SA
+                \item Organigramme: Diffusion restreinte
                 \item CA: 272,8 millions (2022)
-                \item +15\% par rapport à 2021
                     \begin{itemize}
-                        \item Développement
+                        \item +15\% par rapport à 2021
+                        \item En développement
                     \end{itemize}
                 \item Domaine aéronautique
                     \begin{itemize}
