Added VGoIP presentation

--- a/src/l3/internship/presentation/presentation.tex
+++ b/src/l3/internship/presentation/presentation.tex
@@ -8,7 +8,7 @@
 \usetheme{Madrid}
 \usecolortheme{default}
 
-\title{Stage de fin d'année}
+\title{Stage de licence}
 \author{Thibault Tisserand}
 \institute{Université de Lille}
 \date{2023}
@@ -23,6 +23,9 @@
 
 \subsection{CSoIP}
 \include{./slides/csoip}
+
+\section{Produit VGoIP}
+\include{./slides/vgoip}
 
 \section{Sources}
 \include{./slides/sources}
