Added a conclusion slide

--- a/src/l3/internship/presentation/presentation.tex
+++ b/src/l3/internship/presentation/presentation.tex
@@ -27,6 +27,9 @@
 \section{Produit VGoIP}
 \include{./slides/vgoip}
 
+\section{Conclusion}
+\include{./slides/conclusion}
+
 \section{Sources}
 \include{./slides/sources}
 \end{document}
