Added precision on the vgoip

--- a/src/l3/internship/presentation/presentation.tex
+++ b/src/l3/internship/presentation/presentation.tex
@@ -27,6 +27,9 @@
 \section{Produit VGoIP}
 \include{./slides/vgoip}
 
+\section{Mission}
+\include{./slides/mission}
+
 \section{Conclusion}
 \include{./slides/conclusion}
 
