--- a/src/l3/internship/presentation/slides/vgoip.tex
+++ b/src/l3/internship/presentation/slides/vgoip.tex
@@ -3,15 +3,21 @@
     \begin{itemize}
         \item Module du CSoIP
         \item Passerelle de voix sur IP
-        \begin{itemize}
-            \item Convertit la phonie
-            \item 
-        \end{itemize}
-        \item Boitier embarqué
             \begin{itemize}
-                \item Son propre système: LDB
-                \item Très peu de mémoire: 128 mo
+                \item Convertit la phonie
+                    \begin{itemize}
+                        \item Logique vers analogique
+                        \item Analogique vers logique
+                    \end{itemize}
             \end{itemize}
+        \item Logiciel
+        \begin{itemize}
+            \item Boitier embarqué
+                \begin{itemize}
+                    \item Son propre système: LDB
+                    \item Très peu de mémoire: 128 mo
+                \end{itemize}
+        \end{itemize}
         \item Petite équipe
             \begin{itemize}
                 \item 6 personnes
