Fix syntax error

--- a/src/l3/internship/presentation/slides/vgoip.tex
+++ b/src/l3/internship/presentation/slides/vgoip.tex
@@ -1,5 +1,5 @@
 \begin{frame}
-    \frametitle{Produit CSoIP}
+    \frametitle{Produit VGoIP}
     \begin{itemize}
         \item Module du CSoIP
         \item Passerelle de voix sur IP
