Added a new slide on CS Group

--- a/src/l3/internship/presentation/presentation.tex
+++ b/src/l3/internship/presentation/presentation.tex
@@ -21,6 +21,9 @@
 \section{Introduction}
 \include{./slides/introduction}
 
+\section{CS Group}
+\include{./slides/csgroup}
+
 \subsection{CSoIP}
 \include{./slides/csoip}
 
