--- a/src/l3/internship/presentation/slides/introduction.tex
+++ b/src/l3/internship/presentation/slides/introduction.tex
@@ -3,25 +3,9 @@
     \begin{itemize}
         \item Stage de fin d'étude (L3)
         \item Durée: 12 semaines
-        \item Période: 11 avril au 1er Juillet
+        \item Période: 11 avril au 03 Juillet
         \item Société: CS Group
-            \begin{itemize}
-                \item Forme juridique: SA
-                \item Organigramme: Diffusion restreinte
-                \item CA: 272,8 millions (2022)
-                    \begin{itemize}
-                        \item +15\% par rapport à 2021
-                        \item En développement
-                    \end{itemize}
-                \item Domaine aéronautique
-                    \begin{itemize}
-                        \item Civil
-                        \item Militaire
-                    \end{itemize}
-                \item Produit principal: CSoIP
-                    \begin{itemize}
-                        \item Système de communication sur IP
-                    \end{itemize}
-            \end{itemize}
+        \item Maitre de stage: PRAT Maximilien
+        \item Tuteur de stage: DJERABA Chaaabane
     \end{itemize}
 \end{frame}
