Fix syntax error

--- a/src/l3/internship/presentation/slides/vgoip.tex
+++ b/src/l3/internship/presentation/slides/vgoip.tex
@@ -6,8 +6,8 @@
             \begin{itemize}
                 \item Convertit la phonie
                     \begin{itemize}
-                        \item Logique vers analogique
-                        \item Analogique vers logique
+                        \item Numérique vers analogique
+                        \item Analogique vers numérique
                     \end{itemize}
             \end{itemize}
         \item Logiciel
