Fix syntax error

--- a/src/l3/internship/presentation/slides/mission.tex
+++ b/src/l3/internship/presentation/slides/mission.tex
@@ -1,14 +1,14 @@
 \begin{frame}
     \frametitle{Mission}
     \begin{itemize}
-        \item Ecrire des tests automatisés pour le logiciel VGoIP
-        \item Plusieurs missions
+        \item Créer un environnement de tests automatisés pour le logiciel VGoIP
+        \item Plusieurs étapes
             \begin{itemize}
-                \item Prendre en main l'evenvironement
-                \item Ecrire un générateur de configuration pour le VGoIP
-                \item Proposer des solutions technique adaptées aux différents problèmes
-                \item Corrections de bugs
-                \item Ecrire des tests
+                \item Prendre en main l'environnement
+                \item Ecrire un générateur de configuration
+                \item Proposer des solutions technique adaptées
+                \item Corriger des bugs
+                \item Automatis des tests
             \end{itemize}
     \end{itemize}
 \end{frame}
