Added more detail

--- a/src/l3/internship/presentation/slides/vgoip.tex
+++ b/src/l3/internship/presentation/slides/vgoip.tex
@@ -4,7 +4,7 @@
         \item Module du CSoIP
         \item Passerelle de voix sur IP
             \begin{itemize}
-                \item Convertit la phonie
+                \item Convertit la phonie et la signalisation
                     \begin{itemize}
                         \item Numérique vers analogique
                         \item Analogique vers numérique
