Addition of a slide on the working environment

--- a/src/l3/internship/presentation/presentation.tex
+++ b/src/l3/internship/presentation/presentation.tex
@@ -30,6 +30,9 @@
 \section{Mission}
 \include{./slides/mission}
 
+\subsection{Environnement}
+\include{./slides/environment}
+
 \section{Produit VGoIP}
 \include{./slides/vgoip}
 
