Addition of a slide on the FrameTester tool

--- a/src/l3/internship/presentation/presentation.tex
+++ b/src/l3/internship/presentation/presentation.tex
@@ -33,8 +33,11 @@
 \subsection{Environnement}
 \include{./slides/environment}
 
-\section{Produit VGoIP}
+\subsubsection{Produit VGoIP}
 \include{./slides/vgoip}
+
+\subsubsection{FrameTester}
+\include{./slides/frame_tester}
 
 \section{Conclusion}
 \include{./slides/conclusion}
