Addition of a slide on the TTWeb tool

--- a/src/l3/internship/presentation/presentation.tex
+++ b/src/l3/internship/presentation/presentation.tex
@@ -39,6 +39,9 @@
 \subsubsection{FrameTester}
 \include{./slides/frame_tester}
 
+\subsubsection{TTWeb}
+\include{./slides/ttweb}
+
 \section{Conclusion}
 \include{./slides/conclusion}
 
