--- a/src/l3/internship/presentation/slides/ttweb.tex
+++ b/src/l3/internship/presentation/slides/ttweb.tex
@@ -11,4 +11,7 @@
                 \item Executer une table de vérité
             \end{itemize}
     \end{itemize}
+    \begin{center}
+        \includegraphics[width=0.8\textwidth]{./img/truth_table.png}
+    \end{center}
 \end{frame}
