--- a/src/l3/internship/presentation/slides/ttweb.tex
+++ b/src/l3/internship/presentation/slides/ttweb.tex
@@ -15,3 +15,10 @@
         \includegraphics[width=0.8\textwidth]{./img/truth_table.png}
     \end{center}
 \end{frame}
+
+\begin{frame}
+    \frametitle{Fonctionnalités}
+    \begin{center}
+        \includegraphics[width=0.8\textwidth]{./img/ttweb.png}
+    \end{center}
+\end{frame}
