Syntax error fixes

--- a/src/l3/internship/presentation/slides/mission.tex
+++ b/src/l3/internship/presentation/slides/mission.tex
@@ -6,9 +6,9 @@
             \begin{itemize}
                 \item Prendre en main l'environnement
                 \item Ecrire un générateur de configuration
-                \item Proposer des solutions technique adaptées
+                \item Proposer des solutions techniques adaptées
                 \item Corriger des bugs
-                \item Automatis des tests
+                \item Automatisation des tests
             \end{itemize}
     \end{itemize}
 \end{frame}
