--- a/src/l3/internship/presentation/slides/ttweb.tex
+++ b/src/l3/internship/presentation/slides/ttweb.tex
@@ -6,8 +6,8 @@
         \item PostgresSQL
         \item Gérer les tests
             \begin{itemize}
-                \item Généré des jeux de données
-                \item Généré des tables de vérité
+                \item Générer des jeux de données
+                \item Générer des tables de vérité
                 \item Executer une table de vérité
             \end{itemize}
     \end{itemize}
