--- a/src/l3/internship/presentation/slides/conclusion.tex
+++ b/src/l3/internship/presentation/slides/conclusion.tex
@@ -1,6 +1,11 @@
 \begin{frame}
     \frametitle{Conclusion}
     \begin{itemize}
-        \item 
+        \item Rigueur
+        \item Nouvelles connaissances (RTP, SIP)
+        \item Environnement restreint
+        \item Des normes de codage
+        \item Organisation d'un projet (documents)
+        \item Cycle en V
     \end{itemize}
 \end{frame}
