Include 2 new slides

--- a/src/l3/internship/presentation/presentation.tex
+++ b/src/l3/internship/presentation/presentation.tex
@@ -45,6 +45,12 @@
 \subsubsection{TTTest}
 \include{./slides/tttest}
 
+\section{Contribution}
+\include{./slides/contribution}
+
+\section{Difficultés}
+\include{./slides/difficulties}
+
 \section{Conclusion}
 \include{./slides/conclusion}
 
